Alteração das configurações de variáveis de ambiente

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DEBUG = True
 NAME = 'api_ccr'
 USERNAME = 'root'
 PASSWORD = 'Bd_Connect'
-HOST = ec2-34-192-72-159.compute-1.amazonaws.com
+HOST = 127.0.0.1
 PORT = 5432
