--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DEBUG = True
 NAME = 'api_ccr'
 USERNAME = 'root'
 PASSWORD = 'Bd_Connect'
-HOST = 127.0.0.1
-PORT = 5432
+HOST = '127.0.0.1'
+PORT = '5432'
