--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY = '5u-y6b)bd)mka-&^cnj122w28vmiq7y$)a5nk&7i1k(v3u8pv='
-DEBUG = True
+DEBUG = False
 NAME = 'api_ccr'
 USERNAME = 'root'
 PASSWORD = 'Bd_Connect'
