--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,12 +4,13 @@ chardet==4.0.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.1.5
+django-heroku==0.3.1
 djangorestframework==3.12.2
 gunicorn==20.0.4
 ibm-cloud-sdk-core==3.3.6
 ibm-watson==5.1.0
 idna==2.10
-psycopg2-binary==2.8.6
+psycopg2==2.8.6
 PyJWT==2.0.0
 python-dateutil==2.8.1
 python-decouple==3.4
@@ -20,3 +21,4 @@ sqlparse==0.4.1
 static3==0.7.0
 urllib3==1.26.2
 websocket-client==0.48.0
+whitenoise==5.2.0
